--- a/.gitignore
+++ b/.gitignore
@@ -560,3 +560,15 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+## Evitamos enviar archivos de los datos
+data/processed/*
+!data/processed/README.txt
+
+data/raw/*
+data/raw/README.txt
+
+data/reference/*
+!data/reference/README.txt
+
