--- a/.gitignore
+++ b/.gitignore
@@ -572,5 +572,5 @@ data/raw/README.txt
 data/reference/*
 !data/reference/README.txt
 
-results/fastqc_results/*
-!results/fastqc_results/README.txt
+results/fastqc_result/*
+!results/fastqc_result/README.txt
