Adelanto del código hasta el mapeado, falta instalar bwa

--- a/.gitignore
+++ b/.gitignore
@@ -569,8 +569,8 @@ data/processed/*
 data/raw/*
 data/raw/README.txt
 
-data/original_bams/*
-data/original_bams/README.txt
+data/original_bam/*
+data/original_bam/README.txt
 
 data/reference/*
 !data/reference/README.txt
