--- a/code/enviroments/TFM.yml
+++ b/code/enviroments/TFM.yml
@@ -7,9 +7,13 @@ channels:
 
 dependencies:
   - Python=3.11.0
+  - mamba=1.3.1
+  - numpy=1.24.2
+  - pandas=1.5.3
   - sra-tools=3.0.3
   - fastqc=0.12.1
   - samtools=1.15
   - picard=3.0.0
   - snakemake=7.24.2
+  - fastp=0.22.0
 
