LLegada hasta los la extracción de variantes, retocar la información de jupyter (metadata), añadir en el ambiente software
Former-commit-id: 9c89b35d91d8a8b9500c5040e4147e1a427fc2c7

--- a/code/enviroments/TFM.yml
+++ b/code/enviroments/TFM.yml
@@ -17,4 +17,7 @@ dependencies:
   - snakemake=7.24.2
   - fastp=0.22.0
   - bwa=0.7.17
+  - bedtools=2.30.0
+  - vcftools=0.1.16
+  - freebayes=1.0.2
 
