corregimos el archivo de gitignore, permitimos que lea un README vacío
Former-commit-id: 7d71ca9535f3bf34d3481a57d364153281666815

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ results/*
 !results/README.txt
 
 data/original_bam/*
-data/original_bam/README.txt
+!data/original_bam/README.txt
 
 data/reference/*
 !data/reference/README.txt
