--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 ## Evitamos enviar archivos de los datos
+
+data/raw/*
+!data/raw/ERR753375_chr5_1.fastq.gz
+!data/raw/ERR753375_chr5_2.fastq.gz
+
 data/processed/*
 !data/processed/README.txt
 
