Continuando con la biostadística
Former-commit-id: 5f0eacb5bacc376d5c9b6e62cb7bc34eced8f9b8

--- a/code/enviroments/Greference_tools.yml
+++ b/code/enviroments/Greference_tools.yml
@@ -2,6 +2,7 @@ name: Greference_tools
 
 channels:
   - conda-forge
+  - anaconda
   - bioconda
   - default
 
@@ -19,4 +20,5 @@ dependencies:
   - bedtools=2.30.0
   - vcftools=0.1.16
   - freebayes=1.0.2
+  - ipykernel=6.19.2
 
