--- a/config.yaml
+++ b/config.yaml
@@ -33,24 +33,26 @@ samples:
 
 ## Choose your chromosome
 chromosome: chr5
+# Basically the url of a chromosome in this analysis
+url_reference_genome: https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.5.fa.gz
 
-## Fixing your fastq files, FASTP parameters:
+## Fixing the fastq files, FASTP parameters:
 fastp_cuttail: 30
 fastp_cutfront: 30
 fastp_cutmeanq: 30
 fastp_length: 75
 
-## Termination of your reads i write this in case they could be _1/_2 or other
-## like _R1/_R2 for example
-reads_fordward_termination: _1
-reads_reversed_termination: _2
+## Termination of your the reads, i wrote these params in case they
+## could be _1/_2, or others like _R1/_R2 for example
+reads_forward_termination: _1
+reads_reverse_termination: _2
 
 ## Extracting variants
 ref_genome_name_file: genome.fa
 # Min reads that has to be mapping to considerate a variant
 min_reads_variant: 30
 
-## Doing VEP for gene annotation
+## Doing VEP for variant annotation
 vep_species: homo_sapiens
 vep_assembly: GRCh38
   
