--- a/config.yaml
+++ b/config.yaml
@@ -2,39 +2,41 @@
 ##  SNAKEFILE SAMPLES  ##
 #########################
 samples:
-  ERR696683_chr5_1: data/raw/ERR696683_chr5_1.fastq.gz
-  ERR696683_chr5_2: data/raw/ERR696683_chr5_2.fastq.gz
-  ERR753368_chr5_1: data/raw/ERR753368_chr5_1.fastq.gz
-  ERR753368_chr5_2: data/raw/ERR753368_chr5_2.fastq.gz
-  ERR753369_chr5_1: data/raw/ERR753369_chr5_1.fastq.gz
-  ERR753369_chr5_2: data/raw/ERR753369_chr5_2.fastq.gz
-  ERR753370_chr5_1: data/raw/ERR753370_chr5_1.fastq.gz
-  ERR753370_chr5_2: data/raw/ERR753370_chr5_2.fastq.gz
-  ERR753371_chr5_1: data/raw/ERR753371_chr5_1.fastq.gz
-  ERR753371_chr5_2: data/raw/ERR753371_chr5_2.fastq.gz
-  ERR753372_chr5_1: data/raw/ERR753372_chr5_1.fastq.gz
-  ERR753372_chr5_2: data/raw/ERR753372_chr5_2.fastq.gz
-  ERR753373_chr5_1: data/raw/ERR753373_chr5_1.fastq.gz
-  ERR753373_chr5_2: data/raw/ERR753373_chr5_2.fastq.gz
-  ERR753374_chr5_1: data/raw/ERR753374_chr5_1.fastq.gz
-  ERR753374_chr5_2: data/raw/ERR753374_chr5_2.fastq.gz
-  ERR753375_chr5_1: data/raw/ERR753375_chr5_1.fastq.gz
-  ERR753375_chr5_2: data/raw/ERR753375_chr5_2.fastq.gz
-  ERR753376_chr5_1: data/raw/ERR753376_chr5_1.fastq.gz
-  ERR753376_chr5_2: data/raw/ERR753376_chr5_2.fastq.gz
-  ERR753377_chr5_1: data/raw/ERR753377_chr5_1.fastq.gz
-  ERR753377_chr5_2: data/raw/ERR753377_chr5_2.fastq.gz
-  ERR753378_chr5_1: data/raw/ERR753378_chr5_1.fastq.gz
-  ERR753378_chr5_2: data/raw/ERR753378_chr5_2.fastq.gz
+  ERR696683_chr17_1: data/raw/ERR696683_chr17_1.fastq.gz
+  ERR696683_chr17_2: data/raw/ERR696683_chr17_2.fastq.gz
+  ERR753368_chr17_1: data/raw/ERR753368_chr17_1.fastq.gz
+  ERR753368_chr17_2: data/raw/ERR753368_chr17_2.fastq.gz
+  ERR753369_chr17_1: data/raw/ERR753369_chr17_1.fastq.gz
+  ERR753369_chr17_2: data/raw/ERR753369_chr17_2.fastq.gz
+  ERR753370_chr17_1: data/raw/ERR753370_chr17_1.fastq.gz
+  ERR753370_chr17_2: data/raw/ERR753370_chr17_2.fastq.gz
+  ERR753371_chr17_1: data/raw/ERR753371_chr17_1.fastq.gz
+  ERR753371_chr17_2: data/raw/ERR753371_chr17_2.fastq.gz
+  ERR753372_chr17_1: data/raw/ERR753372_chr17_1.fastq.gz
+  ERR753372_chr17_2: data/raw/ERR753372_chr17_2.fastq.gz
+  ERR753373_chr17_1: data/raw/ERR753373_chr17_1.fastq.gz
+  ERR753373_chr17_2: data/raw/ERR753373_chr17_2.fastq.gz
+  ERR753374_chr17_1: data/raw/ERR753374_chr17_1.fastq.gz
+  ERR753374_chr17_2: data/raw/ERR753374_chr17_2.fastq.gz
+  ERR753375_chr17_1: data/raw/ERR753375_chr17_1.fastq.gz
+  ERR753375_chr17_2: data/raw/ERR753375_chr17_2.fastq.gz
+  ERR753376_chr17_1: data/raw/ERR753376_chr17_1.fastq.gz
+  ERR753376_chr17_2: data/raw/ERR753376_chr17_2.fastq.gz
+  ERR753377_chr17_1: data/raw/ERR753377_chr17_1.fastq.gz
+  ERR753377_chr17_2: data/raw/ERR753377_chr17_2.fastq.gz
+  ERR753378_chr17_1: data/raw/ERR753378_chr17_1.fastq.gz
+  ERR753378_chr17_2: data/raw/ERR753378_chr17_2.fastq.gz
 
 ########################
 ##  SNAKEFILE PARAMS  ##
 ########################
 
 ## Choose your chromosome
-chromosome: chr5
-# Basically the url of a chromosome in this analysis
-url_reference_genome: https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.5.fa.gz
+chromosome: chr17
+# Chromosome 5, 17 ENSEMBL:
+# https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.5.fa.gz
+# https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.17.fa.gz
+url_reference_genome: https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.17.fa.gz
 
 ## Fixing the fastq files, FASTP parameters:
 fastp_cuttail: 30
@@ -50,9 +52,13 @@ reads_reverse_termination: _2
 ## Extracting variants
 ref_genome_name_file: genome.fa
 # Min reads that has to be mapping to considerate a variant
-min_reads_variant: 30
+min_reads_variant: 5
 
 ## Doing VEP for variant annotation
 vep_species: homo_sapiens
 vep_assembly: GRCh38
+
+## Gene That you want to filter in the VCF using R
+## APC (chr5) TP53 (chr17)
+gene_to_filterR: TP53
   
