Ya están todos los genes seleccionados de cada cromosoma, pero hay que repetir el chr5 :(
Former-commit-id: 4b70575e689ee5be81a5667b7d05aebb916464ae

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ data/ClinVar/*
 
 results/*
 !results/README.txt
+!results/results_workflow/
+results/results_workflow/plots_workflow/
+!results/results_workflow/chromosome5/*
+!results/results_workflow/chromosome7/*
+!results/results_workflow/chromosome12/*
+!results/results_workflow/chromosome17/*
 
 data/original_bam/*
 
