--- a/code/enviroments/biostatisticsR.yml
+++ b/code/enviroments/biostatisticsR.yml
@@ -2,6 +2,7 @@ name: biostatisticsR
 
 channels:
   - conda-forge
+  - anaconda
   - bioconda
   - default
 
@@ -14,3 +15,4 @@ dependencies:
   - r-gt=0.9.0
   - r-r.utils=2.12.2
   - r-irkernel=1.3.2
+  - nbconvert=5.5.0
