--- a/config.yaml
+++ b/config.yaml
@@ -39,7 +39,7 @@ chromosome: chr3
 # https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.7.fa.gz
 # https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.12.fa.gz
 # https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.17.fa.gz
-url_reference_genome: https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.3.fa.gz
+url_reference_genome: https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.5.fa.gz
 
 ## Fixing the fastq files, FASTP parameters:
 fastp_cuttail: 30
@@ -62,6 +62,6 @@ vep_species: homo_sapiens
 vep_assembly: GRCh38
 
 ## Gene That you want to filter in the VCF using R
-## PIK3CA (chr3); APC (chr5); BRAF (chr7); KRAS (chr3) ;TP53 (chr3)
+## PIK3CA (chromosome 3); APC (chromosome 5); BRAF (chromosome 7); KRAS (chromosome 12) ;TP53 (chromosome 17)
 gene_to_filterR: PIK3CA
   
