--- a/config.yaml
+++ b/config.yaml
@@ -3,32 +3,32 @@
 #########################
 
 samples:
-  ERR696683_chr17
-  ERR753368_chr17
-  ERR753369_chr17
-  ERR753370_chr17 
-  ERR753371_chr17
-  ERR753372_chr17
-  ERR753373_chr17
-  ERR753374_chr17
-  ERR753375_chr17
-  ERR753376_chr17
-  ERR753377_chr17
-  ERR753378_chr17
+  ERR696683_chr3
+  ERR753368_chr3
+  ERR753369_chr3
+  ERR753370_chr3 
+  ERR753371_chr3
+  ERR753372_chr3
+  ERR753373_chr3
+  ERR753374_chr3
+  ERR753375_chr3
+  ERR753376_chr3
+  ERR753377_chr3
+  ERR753378_chr3
 
 ########################
 ##  SNAKEFILE PARAMS  ##
 ########################
 
 ## Choose your chromosome
-chromosome: chr17 
+chromosome: chr3 
 # Chromosome 3, 5, 7, 12, 17 ENSEMBL:
 # https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.3.fa.gz 
 # https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.5.fa.gz
 # https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.7.fa.gz
 # https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.12.fa.gz
 # https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.17.fa.gz
-url_reference_genome: https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.17.fa.gz
+url_reference_genome: https://ftp.ensembl.org/pub/release-109/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.chromosome.3.fa.gz
 
 ## Fixing the fastq files, FASTP parameters:
 fastp_cuttail: 30
@@ -47,4 +47,4 @@ vep_assembly: GRCh38
 
 ## Gene That you want to filter in the VCF using R
 ## PIK3CA (chromosome 3); APC (chromosome 5); BRAF (chromosome 7); KRAS (chromosome 12) ;TP53 (chromosome 17)
-gene_to_filterR: TP53 
+gene_to_filterR: PIK3CA 
